# merchant-service/controller/upload_controller.go
@@ -18,7 +18,7 @@ type uploadController struct {
 
 // UploadMerchantPhoto implements UploadControllerInterface.
 // @Summary Upload Merchant Photo
-// @Tags Upload
+// @Tags Merchant Upload Photo
 // @Accept multipart/form-data
 // @Produce json
 // @Param photo formData file true "Photo"
@@ -26,6 +26,7 @@ type uploadController struct {
 // @Failure      400  {object} map[string]interface{}
 // @Failure      500  {object} map[string]interface{}
 // @Router       /api/v1/upload-merchant [post]
+// @Security Bearer
 func (u *uploadController) UploadMerchantPhoto(c *fiber.Ctx) error {
 	file, err := c.FormFile("photo")
 	if err != nil {
