# warehouse-service/docs/swagger.yaml
@@ -1,4 +1,3 @@
-basePath: /api/v1
 definitions:
   pagination.PaginationResponse:
     properties:
@@ -185,9 +184,11 @@ paths:
           schema:
             additionalProperties: true
             type: object
+      security:
+      - Bearer: []
       summary: Upload photo
       tags:
-      - upload
+      - Warehouse Upload Photo
   /api/v1/warehouse-products/{warehouse_id}:
     get:
       consumes:
@@ -211,9 +212,11 @@ paths:
           schema:
             additionalProperties: true
             type: object
+      security:
+      - Bearer: []
       summary: Get detail warehouse
       tags:
-      - warehouse
+      - Warehouse Products
     post:
       consumes:
       - application/json
@@ -248,9 +251,11 @@ paths:
           schema:
             additionalProperties: true
             type: object
+      security:
+      - Bearer: []
       summary: Create warehouse product
       tags:
-      - warehouse
+      - Warehouse Products
   /api/v1/warehouse-products/{warehouse_id}/detail/{product_id}:
     get:
       consumes:
@@ -279,9 +284,11 @@ paths:
           schema:
             additionalProperties: true
             type: object
+      security:
+      - Bearer: []
       summary: Get warehouse product by warehouse ID and product ID
       tags:
-      - warehouse
+      - Warehouse Products
   /api/v1/warehouse-products/detail/{warehouse_product_id}:
     delete:
       consumes:
@@ -306,9 +313,11 @@ paths:
           schema:
             additionalProperties: true
             type: object
+      security:
+      - Bearer: []
       summary: Delete warehouse product
       tags:
-      - warehouse
+      - Warehouse Products
   /api/v1/warehouse-products/detail/{warehouse_product_id}/{warehouse_id}:
     put:
       consumes:
@@ -349,9 +358,11 @@ paths:
           schema:
             additionalProperties: true
             type: object
+      security:
+      - Bearer: []
       summary: Update warehouse product
       tags:
-      - warehouse
+      - Warehouse Products
   /api/v1/warehouse-products/detail/products/{product_id}:
     delete:
       consumes:
@@ -376,9 +387,11 @@ paths:
           schema:
             additionalProperties: true
             type: object
+      security:
+      - Bearer: []
       summary: Delete all warehouse products by product ID
       tags:
-      - warehouse
+      - Warehouse Products
     get:
       consumes:
       - application/json
@@ -403,9 +416,11 @@ paths:
           schema:
             additionalProperties: true
             type: object
+      security:
+      - Bearer: []
       summary: Get warehouse product by product ID
       tags:
-      - warehouse
+      - Warehouse Products
   /api/v1/warehouse-products/detail/products/{product_id}/total-stock:
     get:
       consumes:
@@ -429,9 +444,11 @@ paths:
           schema:
             additionalProperties: true
             type: object
+      security:
+      - Bearer: []
       summary: Get product total stock
       tags:
-      - warehouse
+      - Warehouse Products
   /api/v1/warehouse-products/detail/products/{warehouse_product_id}/warehouses:
     get:
       consumes:
@@ -455,9 +472,11 @@ paths:
           schema:
             additionalProperties: true
             type: object
+      security:
+      - Bearer: []
       summary: Get detail warehouse product by ID
       tags:
-      - warehouse
+      - Warehouse Products
   /api/v1/warehouses:
     get:
       consumes:
@@ -501,9 +520,11 @@ paths:
           schema:
             additionalProperties: true
             type: object
+      security:
+      - Bearer: []
       summary: Get all warehouses
       tags:
-      - warehouse
+      - Warehouses
     post:
       consumes:
       - application/json
@@ -533,9 +554,11 @@ paths:
           schema:
             additionalProperties: true
             type: object
+      security:
+      - Bearer: []
       summary: Create warehouse
       tags:
-      - warehouse
+      - Warehouses
   /api/v1/warehouses/{id}:
     delete:
       consumes:
@@ -560,9 +583,11 @@ paths:
           schema:
             additionalProperties: true
             type: object
+      security:
+      - Bearer: []
       summary: Delete warehouse
       tags:
-      - warehouse
+      - Warehouses
     get:
       consumes:
       - application/json
@@ -585,9 +610,11 @@ paths:
           schema:
             additionalProperties: true
             type: object
+      security:
+      - Bearer: []
       summary: Get warehouse by ID
       tags:
-      - warehouse
+      - Warehouses
     put:
       consumes:
       - application/json
@@ -622,7 +649,14 @@ paths:
           schema:
             additionalProperties: true
             type: object
+      security:
+      - Bearer: []
       summary: Update warehouse
       tags:
-      - warehouse
+      - Warehouses
+securityDefinitions:
+  Bearer:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
